fix: main-button directs to the start page and not back, main-button stretched to the height of the parent

--- a/src/UI/main-button/style.scss
+++ b/src/UI/main-button/style.scss
@@ -8,9 +8,4 @@
   border-radius: 8px;
   border-width: 1px;
   border-color: #ffffff;
-  height: 38px;
-  width: 81px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
